objects/Account.object
<CustomObject>
    <fields>
        <fullName>Enterprise_National_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account indicator for Enterprise National Accounts</description>
        <label>Enterprise National Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>This field is used to capture the error code received from BlueStar during account number reservation if the callout is not successful.</description>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>This field is used to capture the error message received from BlueStar during Account reservation if the callout is not successful.</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exchange_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the client is interested in or has group products offered on a private exchange.</description>
        <label>Exchange Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exchange_Name__c</fullName>
        <description>This field is used to capture the name of the group private exchange offered to members.</description>
        <label>Group Private Exchange</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Directions for Individuals</fullName>
                </value>
                <value>
                    <fullName>Blue Directions for Small Business</fullName>
                </value>
                <value>
                    <fullName>Blue Directions for Large Business</fullName>
                </value>
                <value>
                    <fullName>Blue Directions for Retirees</fullName>
                </value>
                <value>
                    <fullName>Aon Hewitt Active Exchange</fullName>
                </value>
                <value>
                    <fullName>Mercer Marketplace</fullName>
                </value>
                <value>
                    <fullName>Buck RightOpt</fullName>
                </value>
                <value>
                    <fullName>Towers Watson OneExchange</fullName>
                </value>
                <value>
                    <fullName>Gallagher Marketplace</fullName>
                </value>
                <value>
                    <fullName>Willis Marketplace</fullName>
                </value>
                <value>
                    <fullName>USI Marketplace</fullName>
                </value>
                <value>
                    <fullName>BB&amp;T / McGriff Private Exchange</fullName>
                </value>
                <value>
                    <fullName>Buck/Right Opt Private Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This field is used to capture the External ID of the record from the source system. This could be the Group Number or Producer Number based on the Account Record Type.</description>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSU_Location__c</fullName>
        <description>Assigned or proposed location of an Account&apos;s Full Service Unit (FSU)</description>
        <label>Service Center Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HCSC_Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Abilene</fullName>
                </value>
                <value>
                    <fullName>Albuquerque</fullName>
                </value>
                <value>
                    <fullName>Amarillo</fullName>
                </value>
                <value>
                    <fullName>Belleville</fullName>
                </value>
                <value>
                    <fullName>Champaign</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Danville</fullName>
                </value>
                <value>
                    <fullName>Great Falls</fullName>
                </value>
                <value>
                    <fullName>Helena</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Marion</fullName>
                </value>
                <value>
                    <fullName>Marshall</fullName>
                </value>
                <value>
                    <fullName>Mattoon</fullName>
                </value>
                <value>
                    <fullName>Naperville</fullName>
                </value>
                <value>
                    <fullName>Oklahoma City</fullName>
                </value>
                <value>
                    <fullName>Other (specify)</fullName>
                </value>
                <value>
                    <fullName>Palestine</fullName>
                </value>
                <value>
                    <fullName>Quincy</fullName>
                </value>
                <value>
                    <fullName>Richardson</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                </value>
                <value>
                    <fullName>San Angelo</fullName>
                </value>
                <value>
                    <fullName>Springfield</fullName>
                </value>
                <value>
                    <fullName>Tulsa</fullName>
                </value>
                <value>
                    <fullName>Waco</fullName>
                </value>
                <value>
                    <fullName>Wichita Falls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Face_to_Community__c</fullName>
        <description>This field is no longer used</description>
        <label>Face to Community</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <description>This field is used to capture the URL for the Account&apos;s Facebook page.</description>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>First_Group_Focus__c</fullName>
        <description>This field is used to capture the primary HCM focus for the group</description>
        <label>First Group Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Behavioral health</fullName>
                </value>
                <value>
                    <fullName>Customization of HCM</fullName>
                </value>
                <value>
                    <fullName>Disincentives</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>High touch model</fullName>
                </value>
                <value>
                    <fullName>Health coaching</fullName>
                </value>
                <value>
                    <fullName>Incentives</fullName>
                </value>
                <value>
                    <fullName>Mobile technology</fullName>
                </value>
                <value>
                    <fullName>Musculoskeletal</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>On site HCM</fullName>
                </value>
                <value>
                    <fullName>ROI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Segment__c</fullName>
        <description>The forecast segment value indicator. This is based off of details on the account, such as District or Market Segment.</description>
        <label>Forecast Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ENA</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Received_Date__c</fullName>
        <description>This field is used to capture the Form Received Date as listed in BlueStar</description>
        <label>Form Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fourth_Group_Focus__c</fullName>
        <description>This field is used to capture the quaternary HCM focus for the group</description>
        <label>Fourth Group Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Behavioral health</fullName>
                </value>
                <value>
                    <fullName>Customization of HCM</fullName>
                </value>
                <value>
                    <fullName>Disincentives</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>High touch model</fullName>
                </value>
                <value>
                    <fullName>Health coaching</fullName>
                </value>
                <value>
                    <fullName>Incentives</fullName>
                </value>
                <value>
                    <fullName>Mobile technology</fullName>
                </value>
                <value>
                    <fullName>Musculoskeletal</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>On site HCM</fullName>
                </value>
                <value>
                    <fullName>ROI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingIncrement__c</fullName>
        <label>Funding Increment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>This field is used to capture the funding type(s) of a Prospect or Group Account.</description>
        <label>Funding Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
                <value>
                    <fullName>NDSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_Count__c</fullName>
        <label>GS Count</label>
        <summaryForeignKey>Group_Section__c.Group_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Google__c</fullName>
        <description>This field is used to capture the URL for the Account&apos;s Google+ page.</description>
        <label>Google+ URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Grandfathered_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if an account is grandfathered.</description>
        <label>Grandfathered Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grandfathered_Date__c</fullName>
        <description>This field is used to capture when an account is grandfathered.</description>
        <label>Grandfathered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Anniversary_Date__c</fullName>
        <description>This field is used to capture the Date in which the Group Account&apos;s contracts renew (mm/dd)</description>
        <label>Anniversary Date</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Exchange_Effective_Date__c</fullName>
        <description>This field is used to capture the date the account began offering products on a private exchange to group members</description>
        <inlineHelpText>Date group moved to the Private Exchange</inlineHelpText>
        <label>Group Exchange Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Medicare_Plan__c</fullName>
        <description>This field is used to capture the type of Medicare benefits the group offers</description>
        <inlineHelpText>Type of Medicare benefits the group offers</inlineHelpText>
        <label>Group Medicare Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage Part D</fullName>
                </value>
                <value>
                    <fullName>Medicare Supplement</fullName>
                </value>
                <value>
                    <fullName>Medicare Supplement PDP</fullName>
                </value>
                <value>
                    <fullName>PDP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Medicare_Type__c</fullName>
        <description>Indicates whether a group has a Standard Medicare plan or a Custom Medicare plan</description>
        <label>Group Medicare Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Seamless</fullName>
                </value>
                <value>
                    <fullName>Blue Marketplace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Medicare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if an account is offering Group Medicare</description>
        <inlineHelpText>Whether a group is offering Group Medicare</inlineHelpText>
        <label>Group Medicare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>This field is used to capture the list of group numbers received during the account number reservations. Will be a semicolon separated list of values.</description>
        <label>Group Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Total_Eligible_Members__c</fullName>
        <description>The total number of potential members (subscribers + dependents) for the Account</description>
        <label>Total # of Potential Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Growth_Potential__c</fullName>
        <description>This field is used to capture the growth potential for a Group Account (Subtracts the quotient of [number of BCBS enrolled members divided by total number of potential members] from one)</description>
        <formula>if ( Group_Total_Eligible_Members__c &gt;0, 1- Active_Health_Members__c / Group_Total_Eligible_Members__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Growth Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HCM_Client_Intensity__c</fullName>
        <description>This field is used to capture the rating assigned by HCM, derived from the complexity and time involved for the HCM RFP responses</description>
        <label>HCM Client Intensity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCM_Program_Model__c</fullName>
        <description>This field is used to capture the Health Care Management program offered by the group</description>
        <label>HCM Program Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BCC Standard</fullName>
                </value>
                <value>
                    <fullName>BCC Enhanced</fullName>
                </value>
                <value>
                    <fullName>BCC Elite</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>MHA</fullName>
                </value>
                <value>
                    <fullName>Primary Nurse 1</fullName>
                </value>
                <value>
                    <fullName>Primary Nurse 2</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCSC_Client_Since__c</fullName>
        <description>This field is used to capture the date a Group Account first became an HCSC client as listed in BlueStar</description>
        <label>HCSC Client Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCSC_Division_Full_State__c</fullName>
        <description>Full state name of the HCSC Division</description>
        <formula>CASE( HCSC_Division__c , &quot;IL&quot;, &quot;Illinois&quot;, &quot;TX&quot;, &quot;Texas&quot;, &quot;MT&quot;, &quot;Montana&quot;, &quot;OK&quot;, &quot;Oklahoma&quot;, &quot;NM&quot;, &quot;New Mexico&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HCSC Division Full State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCSC_Division__c</fullName>
        <description>This field is used to capture the HCSC state for a Prospect or Group Account.</description>
        <label>HCSC Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCSC_Revenue__c</fullName>
        <description>This field is used to capture the annual revenue HCSC earns from a Group Account.</description>
        <label>HCSC Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HCSC_as_Fiduciary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if HCSC has fiduciary responsibility.</description>
        <label>HCSC as Fiduciary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HEALTH_MULT_CORP_Tier_Indicator__c</fullName>
        <label>HEALTH MULT CORP Tier Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_County__c</fullName>
        <description>This field is used to capture the county in which a company headquarters office resides.</description>
        <label>HQ County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Dental_Members_Carry_Over_Date__c</fullName>
        <description>This field is used to capture the carry over date of members.</description>
        <label>Health/Dental Members Carry Over Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Health_Rating_Area_Number__c</fullName>
        <label>Health Rating Area Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Health_Tier_Structure__c</fullName>
        <description>Business need is to show the BlueSTAR Tier Number along with the description. (Age Rated vs Composite Rated) Business need is to also view the values associated with age-rated (16) and composite rated (26)</description>
        <label>Health Tier Structure</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_End_Date__c</fullName>
        <label>Hold End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold_Harmless_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the account has a hold harmless agreement.</description>
        <label>Hold Harmless Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Reasons__c</fullName>
        <formula>IF(INCLUDES(SGR_Hold_Reason__c,&apos;Wage &amp; Tax Audit&apos;),&apos;Wage &amp; Tax Audit; &apos;,NULL)+&apos;&apos; +
IF(INCLUDES(SGR_Hold_Reason__c,&apos;1st Year Renewal&apos;),&apos;1st Year Renewal; &apos;,NULL)+&apos;&apos;+
IF(INCLUDES(SGR_Hold_Reason__c,&apos;Block Acquisition&apos;),&apos;Block Acquisition; &apos;,NULL)+&apos;&apos;+
IF(INCLUDES(SGR_Hold_Reason__c,&apos;Special Adjustments&apos;),&apos;Special Adjustments; &apos;,NULL)+&apos;&apos; +
IF(INCLUDES(SGR_Hold_Reason__c,&apos;Miscellaneous&apos;),&apos;Miscellaneous; &apos;,NULL)+&apos;&apos; +
IF(INCLUDES(SGR_Hold_Reason__c,&apos;Market Segment Verification&apos;),&apos;Market Segment Verification; &apos;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Reasons</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Credit_Allowance__c</fullName>
        <description>This field is used to capture the amount of implementation credits available.</description>
        <label>Implementation Credit Amount Available</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Implementation_Credits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a Group account has implementation credits</description>
        <label>Implementation Credits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive_Exception_Explanation__c</fullName>
        <description>This field is used to capture the incentive exception explanation by SG service reps when there is an entire group cancellation.</description>
        <label>Incentive Exception Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incentive_Exception_Reason__c</fullName>
        <description>This field is used to capture the primary reason to justify the incentive exception by SG service reps during group cancellations</description>
        <label>Incentive Exception Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown Violations of Corporate Underwriting guidelines</fullName>
                </value>
                <value>
                    <fullName>Out of state Headquarter rescinds purchasing authority</fullName>
                </value>
                <value>
                    <fullName>In-state Headquarter rescinds purchasing authority</fullName>
                </value>
                <value>
                    <fullName>Group cancels coverage with BCBS and begins new coverage with another Blue Plan</fullName>
                </value>
                <value>
                    <fullName>Cancellation of a single case within a cluster or district can not have more than a 10% impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentive_Exception__c</fullName>
        <description>This field is used by SG service reps when there is an entire Group Cancellation to determine if the entire Group Cancellation qualifies for incentive exception</description>
        <label>Incentive Exception</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <description>This field is used to capture the URL for the Account&apos;s Instagram page.</description>
        <label>Instagram URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Integration_Action__c</fullName>
        <description>This field is used to capture the Type of integration action taken during account number reservation</description>
        <label>Integration Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <description>Response message Sent from Blue Star</description>
        <inlineHelpText>Response message Sent from Blue Star</inlineHelpText>
        <label>Integration Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <description>This field is used to capture the Status of integration during account number reservation</description>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Locations__c</fullName>
        <description>This field is used to capture primary member locations for a Prospect or Group Account.</description>
        <label>Key Locations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Labor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the group is a labor union.</description>
        <label>Labor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labor_fund_ID__c</fullName>
        <description>This is the Labor Fund ID number given to Labor Groups</description>
        <label>Labor fund ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Life__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a Prospect Account is interested in Life Insurance.</description>
        <label>Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_of_business__c</fullName>
        <label>Line of business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ENA,</fullName>
                    <label>ENA</label>
                </value>
                <value>
                    <fullName>Major National</fullName>
                </value>
                <value>
                    <fullName>Major National GET</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Municipal</fullName>
                </value>
                <value>
                    <fullName>SCP</fullName>
                </value>
                <value>
                    <fullName>Student Health</fullName>
                </value>
                <value>
                    <fullName>ENA GET</fullName>
                </value>
                <value>
                    <fullName>Large/Mid Market</fullName>
                </value>
                <value>
                    <fullName>Municipal GET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <description>This field is used to capture the URL of the Account&apos;s LinkedIn page.</description>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Local_Mailbox__c</fullName>
        <label>Local Mailbox</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Long_Term_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a Prospect Account is interested in Long Term Disability Insurance</description>
        <label>Long Term Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MHP_Indicator_Date__c</fullName>
        <description>This field is used to capture the BlueStar - MHP Indicator Date.</description>
        <label>MHP Indicator Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Retro AR Cancellation, Manager and underwriter approval needed, this is checked when manager approved.</description>
        <label>Manager Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Capitalization__c</fullName>
        <description>This field is used to capture the Market Capitalization of the Account</description>
        <label>Market Capitalization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>